tests/errors/semantics/arugs_for_param_struct_must_be_constants.odl
pair_t :: struct(key_t: type, value_t: type) {
    key := key_t.{};
    value := value_t.{};
};

main :: () -> void {
    myint := int;
    a := pair_t(myint, int).{1, 1};
    a;
};
